# DPO

./: .gitignore  README.md  TRL.ipynb  fsdp_dpo_run.py  pyproject.toml  requirements.txt
configs/: deepspeed_zero2.yaml  deepspeed_zero3.yaml
longeval/: eval.py  utils.py
mmlu/: launch_mmlu_tasks.py  run_mmlu.py
mmlu/pythia28/metrics/: pythia28_5_shot.out  pythia28_checkpoint-1000_shot.out  pythia28_checkpoint-1500_shot.out  pythia28_checkpoint-2000_shot.out  pythia28_checkpoint-2500_shot.out  pythia28_checkpoint-500_shot.out
mmlu/pythia28/predictions/: pythia28_5_shot.out  pythia28_LATEST_mmlu_5_shot.out  pythia28_checkpoint-1000_mmlu_5_shot.out  pythia28_checkpoint-1509_mmlu_5_shot.out  pythia28_checkpoint-2012_mmlu_5_shot.out  pythia28_checkpoint-500_mmlu_5_shot.out
notebooks/: chatgpt-eval.ipynb  evaluation.ipynb  forgetting.ipynb  playing.ipynb  plots.ipynb
scripts/: categories_indx.txt  chatgpt-eval.py  dpo.py  evaluation.py  evaluation_multiple.py  forgetting.py  humaneval.py  prompt.txt  sft.py
