[tool.poetry]
name = "dpo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.33.2"
wandb = "^0.15.11"
mlflow = "^2.7.1"
trl = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
